# lab22dev

./: README.md
LAB-22-D-veloppement-Android-avec-JNI-Java-Native-Interface--main/: README.md  settings.gradle
LAB-22-D-veloppement-Android-avec-JNI-Java-Native-Interface--main/app/: build.gradle
LAB-22-D-veloppement-Android-avec-JNI-Java-Native-Interface--main/app/src/androidTest/java/com/example/jnisemo/: ExampleInstrumentedTest.java
LAB-22-D-veloppement-Android-avec-JNI-Java-Native-Interface--main/app/src/main/: AndroidManifest.xml
LAB-22-D-veloppement-Android-avec-JNI-Java-Native-Interface--main/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
LAB-22-D-veloppement-Android-avec-JNI-Java-Native-Interface--main/app/src/main/java/com/example/jnisemo/: MainActivity.java
LAB-22-D-veloppement-Android-avec-JNI-Java-Native-Interface--main/app/src/main/res/layout/: activity_main.xml
LAB-22-D-veloppement-Android-avec-JNI-Java-Native-Interface--main/app/src/main/res/values/: strings.xml  themes.xml
LAB-22-D-veloppement-Android-avec-JNI-Java-Native-Interface--main/app/src/main/res/values-night/: themes.xml
LAB-22-D-veloppement-Android-avec-JNI-Java-Native-Interface--main/app/src/test/java/com/example/jnisemo/: ExampleUnitTest.java
LAB-22-D-veloppement-Android-avec-JNI-Java-Native-Interface--main/gradle/wrapper/: gradle-wrapper.properties
